# yolo_mark_rs

./: Cargo.toml  README.md
data/: names.names
src/: app.rs  lib.rs  main.rs
src/app/: arguments.rs  bbox.rs  drag_status.rs  image_cache.rs  image_file.rs  images.rs  keyboard_mapping.rs  label.rs  names.rs  settings.rs  widgets.rs
src/app/label/: yolo.rs
src/app/label/yolo/: bounding_box.rs
src/app/settings/: yolo.rs
