[package]
name = "yolo_mark_rs"
version = "1.0.0"
authors = ["Marcus Dunn <marcus.s.dunn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.12.0" # Gives us egui, epi and web+native backends
image = { version = "0.23.14", features = ["jpeg"] }
crossbeam = "0.8.0"
num_cpus = "1.13.0"
rand_chacha = "0.3.0"
rand = "0.8.3"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
