[package]
name = "yolo_mark_rs"
version = "1.0.0"
authors = ["Marcus Dunn <marcus.s.dunn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.15.0", features = ["persistence"] }
image = { version = "0.23.14", features = ["jpeg"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
rand_chacha = "0.3.0"
rand = "0.8.3"